--- a/source/道德经释解.md
+++ b/source/道德经释解.md
@@ -1,4 +1,6 @@
-# 引言：道很简单，所以很枯燥 
+# 通行本《道德经》释解
+
+## 引言：道很简单，所以很枯燥 
 2020年10月27日-已删除
 
 2018年08月15日已群发
@@ -42,53 +44,53 @@
 在学质量管理时，有一个概念备受推崇，那就是PDCA（计划、实施、检查、行动），其实在几千年前，我们的圣人就已经提出“立志、勤勉、改过、择善”，道理几乎一模一样。所以说这些方法都是相通的。
 
 道很简单，所以很枯燥。
-# 第一章 道可道 
+## 第一章 道可道 
 2022年11月30日
 2018年08月01日已删除
 【原文】道可道，非常道；名可名，非常名。无，名天地之始；有，名万物之母。故常无，欲以观其妙；常有，欲以观其徼(jiào) 。此两者同出而异名，同谓之玄，玄之又玄，众妙之门。
 【道理研究点译文】可以表述的“道”不是恒久不变的，可以命名的“名”也不是恒久不变的，不同的人、不同时期的人，对“道”与“名”的表述各不相同，但表述背后蕴含的那个“道”始终是不变的。天地之始谓之“无”，万物之母谓之“有”。对于“无”的持续追寻，叫做“妙”，对于各种现象各种理进行归类，越来越“无”，越来越“妙”，对于“有”的追寻，叫做徼（边际），对于理的现象例举，越来越“有”，越来越多，因此需要界定其界限。“无”和“有”说的是同一个，但是追寻的方向不同而已，相同的现象归类为“玄”，而玄本身又是现象，再归类又是“玄”，归类这个过程是为“妙”。
-# 第二章 天下皆知美之为美 
+## 第二章 天下皆知美之为美 
 2022年11月30日
 2018年08月02日已删除
 【原文】天下皆知美之为美，斯恶已；皆知善之为善，斯不善已。故有无相生，难易相成，长短相形，高下相倾，音声相和，前后相随。是以圣人处无为之事，行不言之教，万物作焉而不辞，生而不有，为而不恃，功成而弗居。夫惟弗居，是以不去。
 【道理研究点译文】大家都知道美之所以为美，是相对恶而言的，同样，善也是相对不善而言的。同样的，有和无相生，难和易相成，长和短相形，高和下相倾，音和声相和，前和后相随。圣人处无为之事，无为非不为，处理事情一旦“有为”势必有偏向，做到无欲无求，才能把事情处理得公平公正。“行不言之教”，不言非无言；言再多总有遗漏，所谓“授人以鱼不如授人以渔”。万物自然而“作”，不干预；生养而不占有；向别人施与恩惠但不凭此而达到利己的目的；功成业就而不居功自傲。也正是因为“不居”，才能“不去”。不“得”才能不“失”。
-# 第三章 不尚贤 
+## 第三章 不尚贤 
 2022年11月30日
 【原文】不尚贤，使民不争；不贵难得之货，使民不为盗；不见可欲，使民心不乱。是以圣人之治，虚其心，实其腹；弱其志，强其骨。常使民无知无欲，使夫知者不敢为也。为无为，则无不治。
 
 
 【道理研究点译文】不吹嘘高考状元，就不会有应试教育；不炒房，就不会有离婚买房；社会抱怨声多，是因为相互攀比。因此圣人治国，要戒民攀比之心，给大家一些实在的东西；不空谈理想，多谈些学术研究。这样大家各自安心在自己岗位上勤勤恳恳，个别人想耍小聪明也要保证其不敢投机倒把。这就是“无为而治”。
-# 第四章 道冲而用之或不盈
+## 第四章 道冲而用之或不盈
 2022年11月30日
 【原文】道冲而用之或不盈，渊兮似万物之宗。挫其锐，解其纷，和其光，同其尘。湛兮其若存，吾不知谁之子，象帝之先。
 【道理研究点译文】老子说他也不知道“道”到底是谁“生”的。“冲”是指往里面灌水，知识（道）是无边无际的（不盈），学得越多越觉得懂得太少，因此学到后面真正的“专家”就不会牛逼哄哄天下第一（挫其锐），就不会吵吵闹闹互怼互害（解其纷），收敛其普照大地的高姿态、不炫耀（和其光），即使小至微尘也不自卑自贱（同其尘）。
-# 第五章 天地不仁 
+## 第五章 天地不仁 
 2022年11月30日
 【原文】天地不仁，以万物为刍(chú)狗；圣人不仁，以百姓为刍狗。天地之间，其犹橐(tuó)龠(yuè)乎？虚而不屈，动而愈出。多言数穷，不如守中。
 【道理研究点译文】刍狗是古代祭祀时用稻草编的狗，替代真的狗，祭祀前奉若神明，祭祀后弃如草芥。天地对于万物一视同仁，无论在祭祀前还是祭祀后再“天地”那里始终是稻草，因此无所谓仁与不仁。
 天地之间这个世界看起来是不是有点像个大风箱？看起来空空，但从未屈折，风箱一旦拉动起来，风的力道源源不断。现在经常拿出来说事的是水，水看起来柔，但能穿石。说话也一样，说得多，如风动，看似有力，但是动得越快阻力越大；反过来，不说话就如空气不动，水不动，能包容万千。
-# 第六章 谷神不死 
+## 第六章 谷神不死 
 2022年11月30日
 【原文】谷神不死，是谓玄牝(pìn)，玄牝之门，是谓天地根。绵绵若存，用之不勤。
 【道理研究点译文】“玄牝”就是母体，可以从“无”生“有”，玄牝的门，称为“天地根”，天地之理均从此门出。开山立派跟写论文一样的，先得定义专用术语。
-# 第七章 天长地久 
+## 第七章 天长地久 
 2022年11月30日
 2018年08月06日已群发
 【原文】天长地久。天地所以能长且久者，以其不自生，故能长生。是以圣人后其身而身先，外其身而身存。非以其无私耶？故能成其私。
 【道理研究点译文】天地之所以长久，是因为天地没有“生”，因此也没有“死”，所以长生。正如第二章所言“有无相生，难易相成，长短相形，高下相倾，音声相和，前后相随”，天地万物一切属性都是相对的。任何比赛都有胜负，要想不输只能不比。做事如能做到心里无私（即无欲），那就能“成其私”。（老子狡猾，既然无私了，就无所谓成不成了。）
-# 第八章 上善若水 
+## 第八章 上善若水 
 2022年11月30日
 2018年08月07日已群发
 原文上善若水。水善利万物而不争，处众人所恶，故几於道矣。居善地；心善渊，与善仁，言善信，政善治，事善能，动善时。夫惟不争，故无尤。
 道理研究点译文
 第五章说天地之间的“气”像个大风箱，而肉眼能看见的事物最善莫如水。水能包容万物而不争，我不入地狱谁入地狱。“居善地；心善渊，与善仁，言善信，政善治，事善能，动善时。”。两强相争勇者胜，胜利的诱惑可以让我们努力争胜，可以在失败中锻炼意志，但过于追求胜利，而忘了相争的目的，甚至为了目的不择手段，这就成了“恶”。心静如止水可以化解纷争。
-# 第九章 持而盈之 
+## 第九章 持而盈之 
 2022年11月30日
 原文
 持而盈之，不如其已。揣(zhuī)而锐之，不可长保。金玉满堂，莫之能守。富贵而骄，自遗其咎。功成名遂身退，天之道也。
 道理研究点译文
 拿杯子倒水，倒得太满，就会战战兢兢。削铅笔削得太尖容易断。满屋子钞票者非贪即盗。过于炫富，容易招恨。功成名就了就金盆洗手全身而退，才像个老大的样子，否则迟早被人拉下来干掉。
-# 第十章 载营魄抱一 
+## 第十章 载营魄抱一 
 2022年11月30日
 原文
 载营魄抱一，能无离乎？专气致柔，能如婴儿乎？涤除玄览，能无疵乎？爱民治国，能无为乎？天门开阖，能为雌乎？明白四达，能无知乎？生之、畜之、生而不有，为而不恃，长而不宰，是谓玄德。
@@ -98,7 +100,7 @@
 
 
 老子对于玄妙这个过程用于计量来说，就是标准化。零件的偏差用尺子来“玄妙”，尺子的偏差用标准量块来“玄妙”，标准量块的偏差如何“玄妙”？这就是一个无穷的道。
-# 第十一章 三十辐共一毂 
+## 第十一章 三十辐共一毂 
 2022年11月30日
 原文
 三十辐共一毂，当其无，有车之用。埏(shān)埴(zhí)以为器，当其无，有器之用。凿户牖(yǒu)以为室，当其无，有室之用。故有之以为利，无之以为用。
@@ -109,39 +111,39 @@
 换个角度来看，我们所研究的道理或理论也都需要一定的“空间”，需要“用”，理论本身是“利”，就像一个房子，盖得再漂亮如果没人住也是没用的，甚至可以说，理论本身是空的，只有在实践中用起来，那才是理论的价值所在。
 这点而言，老子比阳明更为务实。
 阳明讲去人欲，但这个太难了，就像我们在淘宝上看到一件自己喜欢的东西，我们称之为“种草”“中毒”，去人欲是让我们关掉淘宝不要去想，而老子说，你先去充分了解了这个东西，包括它的属性它的使用方法它的功能等等，充分掌控它了解它，这时候如果你觉得还需要买，又刚好有足够的钱来买，那就果断“拔草”！你看，这多爽。
-# 第十二章 五色令人目盲
+## 第十二章 五色令人目盲
 2022年11月30日
 2018年08月08日已群发
 原文五色令人目盲，五音令人耳聋，五味令人口爽，驰骋田猎令人心发狂，难得之货令人行妨。是以圣人为腹不为目，故去彼取此。
 道理研究点译文
 无色、五音、五味、驰骋田猎、难得之货，这些都是指好东西；目盲、耳聋、口爽、心发狂、行妨，这些是指失去分辨好与不好的能力。婴儿吃东西都是闭着眼睛，用嘴去感受好吃与不好吃，而稍长大以后，就会用颜色来观察并判断好吃与不好吃，再长大可能就讲色香味，而圣人又回归本原，仅以“饱腹（现在人说的营养价值）”来判断食物。忘了哪部电影里说一个美食家尝遍天下美味，突然有一天失去了味觉，说得可能就是这个道理，，他应该是成圣人了。
-# 第十三章 宠辱若惊 
+## 第十三章 宠辱若惊 
 2022年11月30日
 原文
 宠辱若惊，贵大患若身。何谓宠辱若惊？宠，为下得之若惊，失之若惊，是谓宠辱若惊。何谓贵大患若身？吾所以有大患者，为吾有身，及吾无身，吾有何患？故贵以身为天下者，则可以寄於天下；爱以身为天下者，乃可以托於天下。
 道理研究点译文
 宠辱若惊，贵大患若身。
 有得有失，所以会惊，一惊就会有卑有亢。总是担心会死，那是因为还想占有。人生在世，物尽其用即可，你用天下，天下用你。非得占有，只会苦累一生。
-# 第十四章 视之不见名曰夷 
+## 第十四章 视之不见名曰夷 
 2022年11月30日
 2018年08月10日已群发
 原文视之不见名曰夷，听之不闻名曰希，搏之不得名曰微。此三者不可致诘，故混而为一。其上不皎，其下不昧，绳绳兮不可名，复归於无物，是谓无状之状，无物之象。是谓惚恍。迎之不见其首，随之不见其後。执古之道，以御今之有，能知古始，是名道纪。
 道理研究点译文
 视而不见叫做“夷”，听而不闻叫做“希”，搏而不得叫做“微”。老子本意可能是看不见的颜色，听不到的声音，摸不到的形状，而且是真看不到，不是肉眼看不到，也就是我们所说的未知。你把未知定义为“道”，那就是忽悠。而阳明就科学多了，他把未知的定义为“寂”，把已知的定义为“显”，而且这个“知”要用心去“知”，眼睛看了不叫“知”，有可能视而不见。所以 “夷”、“希”、“微”，虽然可能都是客观存在，但对于观察者而言都是未知，都是“寂”。但老子后面说的“执古之道，以御今之有，能知古始，是名道纪。”，这是方法，就很科学，用已知来推导未知，称为“道纪”。
-# 第十五章 古之善为道者 
+## 第十五章 古之善为道者 
 2022年11月30日
 原文
  古之善为道者，微妙玄通，深不可识。夫惟不可识，故强为之容。豫兮若冬涉川，犹兮若畏四邻，俨兮其若客，涣兮若冰之将释，孰兮其若朴，旷兮其若谷，浑兮其若浊。孰能浊以澄静之徐清？孰能安以久动之徐生？保此道者不欲盈，夫惟不盈，故能敝不新成。
 道理研究点译文
 当官的人城府都很深，让人捉摸不透。如何做到“城府很深”？“豫兮若冬涉川，犹兮若畏四邻，俨兮其若客，涣兮若冰之将释，孰兮其若朴，旷兮其若谷，浑兮其若浊”，一是要扩大自己的胸怀，有容乃大；二是要“不盈”，太满就没有回旋余地，因此“处事”永远要低调于自己的“城府”。“处事”太满，即使再深再大的“城府”也会被人一眼洞穿。
-# 第十六章 致虚极 
+## 第十六章 致虚极 
 2022年11月30日
 原文
  致虚极，守静笃，万物并作，吾以观复。夫物芸芸，各归其根。归根曰静，静曰复命。复命曰常，知常曰明，不知常，妄作，凶。知常容，容乃公，公乃王，王乃天，天乃道，道乃久。没身不殆。
 道理研究点译文
 [copy]尽力使心灵的虚寂达到极点，使生活清静坚守不变。万物都一齐蓬勃生长，我从而考察其往复的道理。那万物纷纷芸芸，各自返回它的本根。返回到它的本根就叫做清静，清静就叫做复归于生命。复归于生命就叫自然，认识了自然规律就叫做聪明，不认识自然规律的轻妄举止，往往会出乱子和灾凶。认识自然规律的人是无所不包的，无所不包就会坦然公正，公正就能周全，周全才能符合自然的“道”，符合自然的道才能长久，终身不会遭到危险。[copy end]
 有点让人厌烦了，你老是说“道”、说“自然规律”，心是静了，但是“道”呢？“道”在哪呢？心静是前提，知“道”是前提，但最终还是要去做“道”，去研究那些形形色色的自然规律。也难怪被后人批为“神仙”之道。
-# 第十七章 太上 
+## 第十七章 太上 
 2022年11月30日
 2018年08月20日已群发
 原文太上，不知有之。其次，亲而誉之。其次，畏之。其次，侮之。信不足焉，有不信焉。悠兮，其贵言。功成事遂，百姓皆谓：“我自然。”
@@ -157,7 +159,7 @@
 国家管理如此，企业管理也是如此，个人做事也是一样。
 
 
-# 第十八章 大道废 
+## 第十八章 大道废 
 2022年11月30日
 2018年08月21日已群发
 原文 大道废，有仁义；智慧出，有大伪；六亲不和，有孝慈；国家昏乱，有忠臣。
@@ -165,7 +167,7 @@
 [copy]大道被废弃了，才有提倡仁义的需要；聪明智巧的现象出现了，伪诈才盛行一时；家庭出现了纠纷，才能显示出孝与慈；国家陷于混乱，才能见出忠臣。[copy end]
 承接上一章，从公司管理角度来看，“没有管理才是真正的管理”，一个管理大咖的出现，正说明之前该公司管理存在很大的问题。好的公司，谁来谁走都无所谓。人员的参差不齐会让公司有所波动，但公司始终会在一个相对平稳的中心线上运作，并识别这些波动，不至于持续恶化。公司如此，市场也是如此，国家同样一样。这就是管理的最高境界。怎么做到的？后面我不知道老子说没说。但是现代的管理科学始终是朝着这个方向在发展的。
 按照老子的这个理论，再反面举个公司管理的例子，如果你的公司有人拼命邀功讨喜，那说明这个部门管理有问题，但你又不能打击这些人，该怎么办？而那些做得好的部门，看起来默默无闻，那无闻了，你又怎么知道他好？这些矛盾需要优秀管理者去处理与分析。
-# 第十九章 绝圣弃智 
+## 第十九章 绝圣弃智 
 2022年11月30日
 2018年08月22日已群发
 原文绝圣弃智，民利百倍；绝仁弃义，民复孝慈；绝巧弃利，盗贼无有。此三者，以为文不足，故令有所属，见素抱朴，少私寡欲。
@@ -173,20 +175,20 @@
 [copy]抛弃聪明智巧，人民可以得到百倍的好处；抛弃仁义，人民可以恢复孝慈的天性；抛弃巧诈和货利，盗贼也就没有了。圣智、仁义、巧利这三者全是巧饰，作为治理社会病态的法则是不够的，所以要使人们的思想认识有所归属，保持纯洁朴实的本性，减少私欲杂念，抛弃圣智礼法的浮文，才能免于忧患。[copy end]
 这个还是承接上一章，“管理的最高境界是没有管理”。也体现老子“道法自然”的根本。道的最高境界就是“自然”，一切遵循自然法则。但这个目标就像自然常数一样，只能无限接近某一个数，永远无法达到。因此才需要社会科学的“礼”。抛弃“礼”是方法，但是要做到完全抛弃是不可能的，一旦还存在“礼”这个人为法则，就需要相关“圣智、仁义、巧利”。
 但是目标是“自然”！
-# 第二十章 绝学无忧 
+## 第二十章 绝学无忧 
 2022年11月30日
 2018年08月23日已群发
 原文 绝学无忧。唯之与阿，相去几何？善之与恶，相去何若？人之所畏，不可畏畏。荒兮其未央哉！众人熙熙，如享太牢，如登春台。我独泊兮其未兆，若婴儿之未孩，儡儡（lěi）兮若无所归。众人皆有余，而我独若遗。我愚人之心也哉！沌沌兮！俗人昭昭，我独昏昏；俗人察察，我独闷闷。澹（dàn）兮其若海，飃 （liù）兮若无止。众人皆有以，我独顽且鄙。我独异於人，而贵求食於母。
 道理研究点译文
 承接前两章，所谓绝学，绝的是绞尽脑汁去学人为法则，人为法则既然是人定的，这样也对那样也对，所以无所谓对错，因此学之无用。但一个社会要完全没有人为法则也是不大可能，因此作为现代人，接触到这个领域了去了解一下即可，无需深入研究。需要深入研究的是自然法则，即所谓的知“道”。俗人“背道逐物”，圣人“忘物体道”。
-# 第二十一章 孔德之容 
+## 第二十一章 孔德之容 
 2022年11月30日
 2018年08月27日已群发
 原文孔德之容，惟道是从。道之为物，惟恍（huăng）惟惚（hū）。惚兮恍兮，其中有象；恍兮惚兮，其中有物。窈（yǎo）兮冥（míng）兮，其中有精；其精甚真，其中有信。自古及今，其名不去，以阅众甫（fǔ）。吾何以知众甫之状哉？以此。
 道理研究点译文
 开篇说的“道可道非常道，名可名非常名”，道是客观存在蕴藏的“理”，无需定义，一旦定义了，就会掺杂定义者本人的观点，导致“理”无法完整地呈现出来。这也要求科学研究者需要摒弃私欲，减少对“理”的约束，甚至是故意曲解，如此整个社会才能昭然若揭，坦坦荡荡。
 五千多年来，中国一直在追求去除私欲，但这个世外桃源般的理想是不设防的，需要全人类来共同奋斗，否则很容易受到冲击。也正因如此中国历史上屡次受到外族的入侵而瓦解。而这种“天理”始终能在瓦解之后重构，也得因于“理”不是某一种族定义的，而是客观存在所蕴含的。无论用中文描述还是英文描述，大家的理解总是能归一，甚至都无需语言来表述，比如音乐的美。
-# 第二十二章 曲则全 
+## 第二十二章 曲则全 
 2022年11月30日
 2018年08月28日已群发
 原文曲则全，枉则直，洼则盈，敝则新，少则得，多则惑。是以圣人抱一为天下式。不自见（xiàn）故明，不自是故彰，不自伐故有功，不自矜（jīn）故长（zhǎng）。夫（fú）唯不争，故天下莫能与之争。古之所谓曲则全者，岂虚言哉！诚全而归之。
@@ -198,98 +200,98 @@
 后面老子让人不要炫耀，不要邀功，不要吹牛，不要自以为是。
 国人深受古文化影响，你要直接炫耀、邀功、吹牛那肯定会被人批得一无是处，但西方又是鼓励表现自己，这一阴一阳，现代人困惑了。因此有人搞出一套法术：私下找人帮自己吹牛，或者表面谦虚实际炫耀，表面批评实际夸奖。例如：我要批评领导不重视革命，天天加班，身体越来越差，身体是革命的本钱，没有身体怎么革命。
 而老子的本意是发自内心的不要自以为是，阳明在一千多年以后又通俗地解释了一下，要知行合一。
-# 第二十三章 希言自然
+## 第二十三章 希言自然
 2022年11月30日
 2018年08月31日已群发
 原文希言自然。故飘风不终朝，骤雨不终日。孰为此者？天地。天地尚不能久，而况于人乎？故从事于道者同于道，德者同于德，失者同于失。同于道者，道亦乐（lè）得之；同于德者，德亦乐得之；同于失者，失亦乐得之。信不足焉，有不信焉。
 道理研究点译文
 老子说要少说话。话只是沟通的工具，达到目的即可，多说无益。每个人都有自己的价值观，说话得目的不是去改变别人，仅仅是传达自己的观点。对方愿不愿意改变或者愿不愿听，你无法通过争辩来完成。再者，争辩多存于“礼”，因为是人定的，所以认知不一，无特定对错，谁知道历史上又有多少指鹿为马的事呢？
-# 第二十四章 跂者不立
+## 第二十四章 跂者不立
 2022年11月30日
 2018年09月04日已群发
 原文跂（qì）者不立，跨者不行，自见（xiàn）者不明，自是者不彰，自伐者无功，自矜者不长（zhǎng）。其在道也，曰余食赘（zhuì）行。物或恶（wù）之，故有道者不处（chǔ）。
 道理研究点译文
 “跂”是惦着脚，想站得比别人高，但是无法长时间站立。“跨”是大踏步走，想走得比别人快，但是无法长时间走。后面“自见者不明，自是者不彰，自伐者无功，自矜者不长”在二十二章中提到过，指为人处世的方法，道理跟“跂”“跨”一样，所谓欲速则不达。想起之前师傅讲的一句话“乌龟为什么能活得久，因为它爬得慢”。老子不是让人一味地追求“慢”，而是要顺其自然，不能拔苗助长。
-# 第二十五章 有物混成 
+## 第二十五章 有物混成 
 2022年11月30日
 原文
 有物混（hùn）成，先天地生。寂兮寥兮，独立而不亥，周行而不殆，可以为天地母。吾不知其名，字之曰道，强为之名曰大。大曰羡，羡曰远，远曰反。故道大，天大，地大，王亦大。域中有四大，而王居其一焉。人法地，地法天，天法道，道法自然。
 道理研究点译文
 又开始讲“道”。不解了。
-# 第二十六章 重为轻根 
+## 第二十六章 重为轻根 
 2022年11月30日
 2018年09月06日已群发
 原文重为轻根，静为躁君。是以圣人终日行不离辎（zī）重（zhònɡ）。虽有荣观，燕处超然。奈何万乘（shèng）之主，而以身轻天下？轻则失根，躁则失君。
 道理研究点译文
 身为重，身外之物为轻。静为纲，噪为目，噪需可控。
-# 第二十七章 善行无辙迹 
+## 第二十七章 善行无辙迹 
 2022年11月30日
 2018年09月07日已群发
 原文善行无辙迹，善言无瑕谪（zhé）；善数（shǔ）不用筹策；善闭无关楗（jiàn）而不可开，善结无绳约而不可解。是以圣人常善救人，故无弃人；常善救物，故无弃物，是谓袭明。故善人者，不善人之师；不善人者，善人之资。不贵其师，不爱其资，虽智大迷，是谓要妙。
 道理研究点译文
 “善行无辙迹，善言无瑕谪；善数不用筹策；善闭无关楗而不可开，善结无绳约而不可解。” 大家都善，就无需规则。老子给我们描绘了一个“乌托邦”，国人潜意识也是这么在做的，所以奉此为圣。但是地球不止中国一家，这种善经不起一点恶，就像排队，大家如果都好好排队，心情开心有所有笑，但是突然前面来了一个插队的，后面立马就紧张起来，有人抱怨插队的，有人往前挤，防止再被插队，有人厌烦挤得这么紧，有人甚至也想跑到前面插队。中国历史总是在逐渐的理想盛世后轻易的就被颠覆（有内鬼捣乱有外族入侵），颠覆后再重构。所谓分久必合合久必分。老子的道德理论过于理想化，不知道后面有没有提出防错的对应，阳明提出了“立志，勤学，改过，责善”，也就是西方的P(lan)D(o)C(heck)A(ction)循环，因此局部应用的适用性更强。
-# 第二十八章 知其雄 
+## 第二十八章 知其雄 
 2022年11月30日
 2018年09月10日已群发
 原文
 知其雄，守其雌，为天下溪。为天下溪，常德不离，复归于婴儿；知其白，守其黑，为天下式。为天下式，常德不忒（tè），复归于无极；知其荣，守其辱，为天下谷。为天下谷，常德乃足，复归于朴。朴散则为器，圣人用之，则为官长（zhǎng）。故大制不割。
 道理研究点译文
 学道，悟之为难；既悟，守之为难。物无与敌谓之雄，柔伏处下谓之雌。圣人就是要练成天下无敌的武功，然后做个扫地僧。我想每个中国人心里都有这么一个理想。古人思想的影响力还是很大的。先不论这种思想是否符合现代社会的需求，单单从根源处研究中国社会环境研究中国人思维方式，然后应用于各种社会活动，还是很有科学价值的。但这种研究的前提是，你得先悟道。
-# 第二十九章 将欲取天下而为之 
+## 第二十九章 将欲取天下而为之 
 2022年11月30日
 原文
 将欲取天下而为之，吾见其不得已。天下神器，不可为也，不可执也，为者败之，执者失之。是以圣人无为故无败，无执故无失。故物或行或随，或嘘或吹，或强或羸（léi），或载或隳（huī）。是以圣人去甚，去奢，去泰。
 道理研究点译文
 这章不解了，反正字面意思太消极了。我的观点是，“谋事在人，成事在天”。无为不是不做事，而是不要计较成不成事。人生本就是一过程，不是为了追求那个结果-“死”。认真去做任何事，不要考虑这个事“有没有意义”“会不会成功”。
-# 第三十章 以道佐人主者 
+## 第三十章 以道佐人主者 
 2022年11月30日
 2018年09月17日已群发
 原文以道佐人主者，不以兵强天下。其事好（hào）还。师之所处，荆棘生焉。大军之后，必有凶年。善有果而已，不敢以取强。果而勿矜，果而勿伐，果而勿骄。果而不得已，果而勿强。物壮则老，是谓不道，不道早已。
 道理研究点译文
 这一章可以说是老子的兵家哲学。打仗的目的是为了解决纷争，纷争解则战止，不可恃强凌弱。“如世人恃强而用力过者，必夭死于力”。强身健体可以免受人欺，而过于追求强壮则往往会过劳折寿。国家养兵亦是如此。
-# 第三十一章 夫隹兵者 
+## 第三十一章 夫隹兵者 
 2022年11月30日
 2018年09月27日已群发
 原文夫隹（wéi唯）兵者，不祥之器，物或恶之，故有道者不处。君子居则贵左，用兵则贵右。兵者不祥之器，非君子之器，不得已而用之，恬淡为上。胜而不美，而美之者，是乐（yào）杀人。夫乐（yào）杀人者，则不可以得志于天下矣。吉事尚左，凶事尚右。偏将军居左，上将军居右，言以丧（sāng）礼处之。杀人之众，以哀悲位（wèi）之，战胜，以丧礼处之。
 道理研究点译文
 “君子居则贵左，用兵则贵右”，左派右派原来是从这里来的。“左”和“右”没有对错，最重要的是平衡。
-# 第三十二章 道常无名 
+## 第三十二章 道常无名 
 2022年11月30日
 2018年10月10日已群发
 原文道常无名，朴虽小，天下莫能臣也。侯王若能守之，万物将自宾。天地相合，以降甘露，民莫之令而自均。始制有名，名亦既有，夫亦将知止，知止所以不殆。譬道之在天下，犹川谷之于江海。
 道理研究点译文
 “朴，乃无名之譬。木之未制成器者，谓之朴。若制成器则有名。”老子讲王侯治国，朴是百姓，器是国家，国家有名，朝代有变，百姓虽小但始终在土地上生存着，离开百姓，国家将毫无意义。因此治国不是为了统治而是提高百姓生活，那么民众自然归顺。
-# 第三十三章 知人者智 
+## 第三十三章 知人者智 
 2022年11月30日
 2018年10月11日已群发
 原文知人者智，自知者明。胜人者有力，自胜者强。知足者富。强行者有志。不失其所者久。死而不亡者寿。道理研究点译文
 前一章讲治国，这一章讲为人。“胜人者有力，自胜者强。”。如果还要去跟人比，证明自己还不够强大。而真正强大的方法是阳明说“存真理，去人欲”。所谓的“强”“弱”是人定义的，也就是说是别人的观念，你去争强弱是要证明给别人看，而真正的“强”，是达到自己设定的那个目标，去完成真正属于自己的、发自内心的、不是给谁看的、人生使命。而这个目标和使命是否真的属于自己的，就需要用老子的“道”来评价，也就是需要符合天理。
-# 第三十四章 大道氾兮 
+## 第三十四章 大道氾兮 
 2022年11月30日
 2018年10月15日 09:59已群发
 原文大道氾（fàn泛）兮，其可左右。万物恃之而生而不辞，功成不名有，衣养万物而不为主。常无欲，可名于小；万物归焉而不为主，可名为大。以其终不自为大，故能成其大。
 道理研究点译文
 想起电影《倚天屠龙记》里，张无忌学太极，学到后来祖师问他都记住了吗？他说我都忘记了，祖师夸“好”。任何功夫任何学问都是如此，一开始学基本功，然后悟道，道通万理，感觉好像忘了所有基本功，而实际却是把基本功融于意识，无需去想。就像开车，学的时候得记住标线记住动作要领，学到后来都是靠感觉。就像学科学，刚开始得学高数，但用到后来感觉高数的公式都可以用电脑计算，而实际上是需要熟练了解各种公式。
 道就是这么个东西，感觉不存在，而实际却是无时无刻不存在。当你熟练掌握了某一项技能，你就可以说我已经悟了，悟了就是不用再去“想”了，什么都可以信手拈来。
-# 第三十五章 执大象 
+## 第三十五章 执大象 
 2022年11月30日
 原文
 执大象，天下往。往而不害，安平太。乐（yuè）与饵，过客止。故道，淡兮其无味，视之不足见（jiàn），听之不足闻，用之不可既。
 道理研究点译文
 继续讲大道理。玄化了，不释解了。
-# 第三十六章 将欲歙之 
+## 第三十六章 将欲歙之 
 2022年11月30日
 原文
 将欲歙（xī）之，必固张之；将欲弱之，必固强之；将欲废之，必固兴之；将欲夺之，必固与之。是谓微明。柔弱胜刚强。鱼不可脱于渊，国之利器不可以示人。
 道理研究点译文
 这么多排比句，用XbarR图来说就是到了波峰位置，要不就是下降，要不就是异常点，这是自然规律。君子要害人（君子不能说“害人”，而是说“去人强”），往往依据这个规律，先强他，然后让自然去弱他，或者灭他。
-# 第三十七章 道常无为而无不为 
+## 第三十七章 道常无为而无不为 
 2022年11月30日
 原文
 道常无为而无不为。侯王若能守之，万物将自化。化而欲作（zuò），吾将镇之以无名之朴。无名之朴，夫亦将无欲。不欲以静，天下将自定。
 道理研究点译文
 道常无为而无不为。上篇完。下篇开始讲“德”。
-# 第三十八章 上德不德 
+## 第三十八章 上德不德 
 2022年11月30日
 原文
 上德不德，是以有德；下德不失德，是以无德。上德无为而无以为，下德为之而有以为，上仁为之而无以为，上义为之而有以为，上礼为之而莫之应，则攘（rǎng）臂而扔之。故失道而后德，失德而后仁，失仁而后义，失义而后礼。夫礼者，忠信之薄而乱之首。前识者，道之华而愚之始。是以大丈夫处其厚不居其薄，处其实不居其华。故去彼取此。
@@ -299,19 +301,19 @@
 现在很多电视剧喜欢去推翻历史，其实也无可厚非，因为谁也不知道真正的历史是什么样的，研究历史也只是“好玩”，通过研究，不断地去检验所谓的“真相”。
 “道”虽然是真理，但不好玩，因为没有“变”。就像男女恋爱找对象，如果纯粹是结婚生子，照着身高体重相貌智商标准去选择即可，设计一个标准，然后直接发结婚证书，然后去繁衍下一代。但是恋爱是失了这个“道”，然后衍生出形形色色的“德”，也正因此千百年来让人着迷。
 因此，“道”是做事的目标，而“德”才是为人的乐趣。
-# 第三十九章 昔之得一者
+## 第三十九章 昔之得一者
 2022年11月30日
 原文
 昔之得一者。天得一以清，地得一以宁，神得一以灵，谷得一以盈，万物得一以生，侯王得一以为天下贞。其致之，天无以清将恐裂，地无以宁将恐发（fèi），神无以灵将恐歇，谷无以盈将恐竭，万物无以生将恐灭，侯王无以贞将恐蹶（jué）。故贵以贱为本，高以下为基。是以侯王自谓孤、寡、不榖（谷gǔ）。此非以贱为本邪（yé）？非乎？故致舆（yù）无舆，不欲琭（lù）琭如玉，珞（luò）珞如石。
 道理研究点译文
 不要以为自己“琭琭如玉”，别人“珞珞如石”，其实都是石头。玉有玉的用处，石有石的价值，符合自然规律才是大作为，无论把玉当石用，还是把石当玉用，都会遭“天谴”。
-# 第四十章 反者道之动 
+## 第四十章 反者道之动 
 2022年11月30日
 原文
 反者道之动，弱者道之用。天下万物生于有，有生于无。
 道理研究点译文
 “道”万理之理，让人凝神聚气，“德”万礼之礼，让人心烦意乱。道是无，德是有。无，则患得，有，则患失。
-# 第四十一章 上士闻道 
+## 第四十一章 上士闻道 
 2022年11月30日
 2018年10月31日已删除
 原文
@@ -319,21 +321,21 @@
 道理研究点译文
 牛逼的人悟道后，“知行合一”，去实践一种或多种“理”。稍差点的，将信将疑，浪费了不少光阴。最垃圾的就是没听懂然后还嗤之以鼻的。
 有时候认为自己很牛逼，啥都能做，有时候认为自己很垃圾，啥都做不了。圣人说：不要去认为怎么样，直接去做就好了。
-# 第四十二章 道生一 
+## 第四十二章 道生一 
 2022年11月30日
 2018年11月16日已删除
 原文
 道生一，一生二，二生三，三生万物。万物负阴而抱阳，冲气以为和。人之所恶，唯孤、寡、不榖（谷gǔ），而王公以为称。故物或损之而益，或益之而损。人之所教，我亦教之：“强梁者不得其死”，吾将以为教父。
 道理研究点译文
 作为领导者，需要清心寡欲，很多时候不能跟属下谈论兴趣爱好。原因就在这里。王者永远是孤独的，只有放弃所有，才能掌控万物。当你专心于某事物时，也就意味着被其掌控。做自己喜欢的是人生一大乐趣，不要羡慕那些王侯将相。
-# 第四十三章 天下之至柔
+## 第四十三章 天下之至柔
 2022年11月30日
 2018年11月26日已删除
 原文
 天下之至柔，驰骋天下之至坚。无有入无间。吾是以知无为之有益。不言之教，无为之益，天下希及之。
 道理研究点译文
 “凡好为者必易败”。当你感觉心有余而力不足时，就不为。不为不是放弃，放弃是不管不顾，而不为是不仅要管顾，还要想办法让其受控，但是不是硬来，而是顺着自然进行控制。就如驾船，方向偏了，不能使劲转舵，当你感觉转到正的时候，实际已经过了，过了又再使劲转回去，这样船就左右摇晃，甚至会翻船。而不为的意思，就是偏了就让他偏了，稍微划一浆，能回多少是多少。多看多听，尽量不要过多的加入自己的“意愿”，老子所说的“为”，更多的是指个人意愿，这个王阳明的“欲”是一致的，不为就是去人欲，而存真理就是那个“道”。而“德”就是不为。
-# 第四十四章 名与身孰亲 
+## 第四十四章 名与身孰亲 
 2022年11月30日
 2018年11月28日已删除
 原文
@@ -341,7 +343,7 @@
 道理研究点译文
 “凡爱之甚者，费必大”。凡迷恋上一事一物一人，其必掏空你的心肺，当你失去时，就像死去一般，再无生恋。老子说，我们不能被身外之事物所控制。名和利，得了就把玩一番，失了就当没得过。能让人迷恋上的都非“道”，因为“道”是无穷无尽的，也就是说“道”的尽头是无，既然“无”，也就无所谓得失了。
 举个例子，我们学数学，数学的“道”，就是那些原理公式，奥妙无穷，越学越觉得自己不懂的太多。而有的同学，学数学是为了去拿奥数奖牌，为了将来找份好工作，有一天领导跟他说1+1应该等于3，不等于3就不能拿奖，然后他就去研究为什么等于3可以拿奖，乐此不疲。这就是名利。
-# 第四十五章 大成若缺
+## 第四十五章 大成若缺
 2022年11月30日
 2018年12月13日已删除
 原文
@@ -349,7 +351,7 @@
 道理研究点译文
 原来除了“大智若愚”还有这么多“大X若X”。但可能我原来的理解有误。我原来理解是，有大智慧的人看上去都是傻傻的，而老子的意思是，只有认识到自己的愚昧的人，才是最聪明的。“大成若缺”：只有知道“缺”，才能“成”，就像万物生长，要有死才能生，世界因此才生机勃勃。
 以此类推，西方人就创造了PDCA循环。
-# 第四十六章 天下有道 
+## 第四十六章 天下有道 
 2022年11月30日
 原文
 天下有道，却走马以粪。天下无道，戎马生于郊。祸莫大于不知足，咎莫大于欲得。故知足之足，常足矣。
@@ -357,7 +359,7 @@
 良好的社会环境，人们都不看谁开得车好车大，天天走路上下班。不好的社会环境，坦克满地跑，随时注意不要被人撞死。你走路上班，看到有人骑车，你也要去买，然后看到有人骑摩托车，你也买，然后…然后…都懂得，就是买坦克上班了。
 所谓“德”，就是要控制这些欲望。先不说作为“人”的每个个体，单单就国家或者某个社会集群范围而言，这样的做法肯定是符合自然规律的，也因此会良好发展的。
 如果说市场是经济社会无形的手，那“哲学”就是政治社会那只无形的手。价格是市场的那个标准，而“德”是哲学的那个标准。
-# 第四十七章 不出户 
+## 第四十七章 不出户 
 2022年11月30日
 原文
 不出户，知天下；不窥牖（yŏu），见天道。其出弥远，其知弥少。是以圣人不行而知，不见而名，不为而成。
@@ -376,19 +378,19 @@
 如果把开企业作为人生的一种经历，乐在其中，那商人的规划是非常有价值的。
 以上是“出户不知天下”。老子说的“不出户知天下”，那种境界我还无法理解，但是能感受到，就像上面的那些例子拿来说教，说到后来就会公说公有理婆说婆有理，只能适可而止。这是“德”的局限性，而“道”不然，用数学概念来说，德是发散的，道是收敛的。
 怎么做到“不为而成”？
-# 第四十八章 为学日益
+## 第四十八章 为学日益
 2022年11月30日
 原文
 为学日益，为道日损。损之又损，以至于无为。无为而无不为。取天下常以无事，及其有事，不足以取天下。
 道理研究点译文
 为学是“妙”，知识的展开，为道是“玄”，知识的归类。老子一味讲究归类，还是有点偏激。更为人性的做法可能是“妙”和“玄”结合。多见识不同的领域，但不能见什么都想去学都想要，长见识的目的是为了更好地归类。从而使自己的认识逐渐走向“正确”。中国人从古就讲究有舍才有得。中华文明也因此才得以长久延续。
-# 第四十九章 圣人无常心 
+## 第四十九章 圣人无常心 
 2022年11月30日
 原文
 圣人无常心，以百姓心为心。善者吾善之，不善者吾亦善之，德善。信者吾信之，不信者吾亦信之，德信。圣人在天下，歙歙（xī xī）焉，为天下浑其心，百姓皆注其耳目，圣人皆孩之。
 道理研究点译文
 所谓常心就是私欲，体现在说话上可能就是，“我想……”，“你要……”，圣人就是神仙，没有丝毫私欲。而众生听听就好了，“注其耳目”，要敬仰神仙，而不能去学妖魔鬼怪。作为普通百姓，知道什么是神仙什么是妖魔就好了，能做到什么程度就看自己天赋了。但是就一个神仙妖魔，让人分辨起来都不是那么容易了，不会像电视电影里那样一眼能看出。
-# 第五十章 出生入死 
+## 第五十章 出生入死 
 2022年11月30日
 原文
 出生入死。生之徒十有（yòu又）三，死之徒十有yòu三，人之生动之死地亦十有（yòu）三。夫何故？以其生生之厚。盖闻善摄生者，陆行不遇兕（sì）虎，入军不被（pī）甲兵；兕无所投其角，虎无所措其爪（zhǎo），兵无所容其刃。夫何故？以其无死地。
@@ -399,19 +401,19 @@
 
 “武功的最高境界是没有武功”，因为有武功，都想争个第一，比个高下，因此才有打斗，如果没有纷争，没有打斗，也就无需武功了。
 生死也是如此。生便生，死则死，不用去考虑“为什么而活着”。
-# 第五十一章 道生之
+## 第五十一章 道生之
 2022年11月30日
 原文
 道生之，德畜（xù）之，物形之，势成之。是以万物莫不尊道而贵德。道之尊，德之贵，夫莫之命而常自然。故道生之，德畜之。长之育之，亭之毒之，养之覆之。生而不有，为而不恃，长而不宰，是谓玄德。
 道理研究点译文
 道是生，新的理论的发现如生小孩，从无到有。德要养，各种规则要随着时间推移不断更新完善。
-# 第五十二章 天下有始 
+## 第五十二章 天下有始 
 2022年11月30日
 原文
 天下有始，以为天下母。既得其母，以知其子，既知其子，复守其母，没（mò）身不殆。塞（sè）其兑，闭其门，终身不勤（qín瘽）。开其兑，济其事，终身不救。见小曰明，守柔曰强。用其光，复归其明，无遗身殃，是为习常。
 道理研究点译文
 道为天下万物之母，万物都有道理，不能“循物而望道”，比如现在这台电脑，它现在的道是可以打字，那你去买电脑的时候就要选择打字功能良好的，而不要去追求键盘是不是纯金的。道理看似简单，但现实中很多人往往会忘记会被迷惑。
-# 第五十三章 使我介然有知 
+## 第五十三章 使我介然有知 
 2022年11月30日
 原文
 使我介然有知，行于大道，唯施（yì）是畏。大道甚夷，而人好径（jìng）。朝（cháo）甚除，田甚芜，仓甚虚；服文彩，带利剑，厌饮食，财货有余。是为盗夸，非道也哉！
@@ -421,7 +423,7 @@
 讲道易，行道难。老夫子估计也是受小人祸害了。圣人也有抱怨。
 小人龌蹉的事就不举例了。总之就像踩到狗屎，臭味挥之不去。
 讲道时可以高谈阔论，行道时就如同行路，需时时看着脚下，避免踩到狗屎。踩到就多洗洗，不要跟狗屎较劲。
-# 第五十四章 善建者不拔
+## 第五十四章 善建者不拔
 2022年11月30日
 原文
 善建者不拔，善抱者不脱，子孙以祭祀不辍（chuò）。修之于身，其德乃真；修之于家，其德乃余；修之于乡，其德乃长（zhǎng）；修之于国，其德乃丰；修之于天下，其德乃普。故以身观身，以家观家，以乡观乡，以国观国，以天下观天下。吾何以知天下然哉？以此。
@@ -429,48 +431,48 @@
 比如足球。
 如果仅仅是比球技，那没有人能称球王，因为谁也不知道将来会不会有球技更好的。而球王之所以被称为球王，不仅仅是因为他的球踢得好的，而且球德好。这样才会被球迷世代供奉。
 “德”逐渐由礼仪规则转变为品德。先前的“德”泛指所有人为准则，而后来的“德”逐渐理解为好的人为准则。
-# 第五十五章 含德之厚
+## 第五十五章 含德之厚
 2022年11月30日
 原文
 含德之厚，比于赤子。蜂虿（chài）虺（huǐ）蛇不螫（shì），猛兽不据（jù），攫（jué）鸟不搏。骨弱筋柔而握固。未知牝（pìn）牡（mǔ）之合而全作，精之至也。终日号好而不嗄（shà），和之至也。知和曰常，知常曰明。益生曰祥，心使气曰强。物壮则老，谓之不道，不道早已。
 道理研究点译文
 这章用道解释养生。初生婴儿终日啼哭也不会沙哑（嗄哑），因为其心不动，无哀伤怨慕之情。人之厚德，正如赤子（婴儿），以身为主，以精为卫，以气为守。精随气转，气逐心生。心妄动则气散，气散则精益。所谓心著行淫，男女二根自然流液。故善养者，当先持其心，勿使妄动。心不妄动则平定，心平则气和，气和则精自固，而神自安，真常之性自复矣-憨山道者
-# 第五十六章 知者不言 
+## 第五十六章 知者不言 
 2022年11月30日
 原文知者不言，言者不知。塞（sè）其兑，闭其门，挫其锐，解其分，和其光，同其尘，是谓玄同。故不可得而亲，不可得而疏；不可得而利，不可得而害；不可得而贵，不可得而贱，故为天下贵。
 道理研究点译文
 中国人自信不在于科技有多发达，制度有多先进，因为再发达再先进也都是一时的，几百年后再回过头来看说不定觉得很愚昧。中国人的自信在于我们还能看懂两千年前祖先的文字与思想，而且是超乎现在的觉悟。知者不言、言者不知，祖先已经看透孰好孰坏，那我们呢？
-# 第五十七章 以正治国
+## 第五十七章 以正治国
 2022年11月30日
 原文
 以正治国，以奇用兵，以无事取天下。吾可以知其然也。天下多忌讳，而民弥贫；民多利器，国家滋昏；人多伎（jì）巧，奇物滋起；法令滋彰，盗贼多有。故圣人云：“我无为而民自化，我好静而民自正，我无事而民自富，我无欲而民自朴。”
 道理研究点译文
 无为而治。之前已经说得够多了，不再解释。追加一句企业里的通病：“人事不干人事。”
-# 第五十八章 其政闷闷
+## 第五十八章 其政闷闷
 2019年06月20日已删除
  2022年11月30日 发布失败  
 原文
 其政闷闷，其民淳淳；其政察察，其民缺缺。祸兮福之所倚，福兮祸之所伏。孰知其极？其无正（dìng）。正（zhènɡ）复为奇，善复为妖。人之迷，其日固久。是以圣人方而不割，廉而不刿（guì），直而不肆，光而不耀。
 道理研究点译文
 道要讲刨根究底，对事物的研究要透彻，层层发掘，要察察。而德则不然，要闷闷。中国历来讲究愚民政策，因为人心不古。道是天定的，弄清楚了就可以服天，而德是人定的规则，弄清楚了就会反人。所以法律都是先制定，然后被人钻漏洞，然后去修补，再找漏洞，不断完善。你会发现越完善越看不懂。如果人人都能看懂那就成了自然规律就是道。而法律仅仅是守法的那部分人用来约束不守法的那部分人的工具，并非自然规律，无法让所有人都能看得懂。企业也是一样，对于需要让人去遵守的规章制度，无需解释为什么，只要执行即可。而对于产品失效的原因则要一个为什么接一个为什么，直至找到根本原因。
-# 第五十九章 治人事天 
+## 第五十九章 治人事天 
 2022年11月30日
 原文治人事天，莫若啬（sè）。夫唯啬，是谓早服；早服谓之重（zhònɡ）积德；重（zhònɡ）积德则无不克，无不克则莫知其极；莫知其极，可以有国；有国之母，可以长久。是谓深根固柢（dǐ），长生久视之道。
 道理研究点译文
 啬指有而不用，就是节俭，吝啬的啬；早服就是早做准备。人挣钱花钱也是这个道理，要省着用，要为将来考虑。但是不能全部为将来考虑，得有个度，人活着最亏的就是死了钱没花完，所以得考虑当下，该花钱的地方花，该享受的时候享受，万一有一天走在路上被车撞死了也不至于太后悔，但同时也得留一部分精力考虑将来，否则现在是享受了，将来万一没死，就活得很难受了。当然老子先生讲的是积德。
-# 第六十章 治大国 
+## 第六十章 治大国 
 2022年11月30日
 2019年06月24日已删除
 原文治大国，若烹（pēnɡ）小鲜。以道莅（lì）天下，其鬼不神；非其鬼不神，其神不伤人；非其神不伤人，圣人亦不伤人。夫两不相伤，故德交归焉。
 道理研究点译文
 治大国，就像烧鱼，不能搅来搅去，搅多了就烂了。多费心观察，少动作，但又不能不动，不动就会烧焦。各种礼仪规矩容易让管理者心烦意乱，圣人说要心静，不要到处瞎捣鼓，除了违背道（自然规律）的，其他的规则多观察就行了，不用管太多。人定的规则他会在人群中随着时间发展自己走向稳定合理，干预多了就会成为“鬼神”。企业也一样，当你不知道某一项制度该怎么定的时候，就先不订，让大家自己摸索，最后自己设立规矩，然后你就适时写下来，如此就成了制度。
-# 第六十一章 大国者下流 
+## 第六十一章 大国者下流 
 2022年11月30日
 2019年08月05日已删除
 原文大国者下流，天下之交，天下之牝。牝常以静胜牡，以静为下。故大国以下小国，则取小国；小国以下大国，则取大国。故或下以取，或下而取。大国不过欲兼畜（xù）人，小国不过欲入事人。夫两者各得其所欲，大者宜为下。
 道理研究点译文
 道崇尚“下”和“静”。下流则可纳污含垢，无所不容。容纳污垢不是让自己变为污垢，用心理学的说法就是你的情商很高，情绪波动触发阈值很高，这就是“静”，同样静也不是说不动，而是说所有的动均是经过静的思考，不为别人的动而动。
-# 第六十二章 道者万物之奥 
+## 第六十二章 道者万物之奥 
 2022年11月30日
 2020年01月17日已删除
 原文道者万物之奥，善人之宝，不善人之所保。美言可以市尊，美行可以加人。人之不善，何弃之有？故立天子，置三公，虽有拱（gŏng）璧以先驷（sì）马，不如坐进此道。古之所以贵此道者何？不曰：以求得，有罪以免邪（yé）？故为天下贵。
@@ -479,7 +481,7 @@
 把“事件”“人物”等放在一个较长的时间段或者更广的社会环境来讨论时，我们经常会发现，所谓的善恶会发生变化的。比如文革时“造反有理”，不造反你就是恶人，把时间拉长二十年再来看，造反的人才是恶人。
 回到房子那个比喻，客厅好不好，取决于来的客人的审美。而储藏室好不好，只有自己知道，够用，拿取方便，存放安全，这些就是你的“道”，不会随客人不同而变化的。
 王阳明那个“你未看此花时，此花与汝心同归于寂；你来看此花时，则此花颜色一时明白起来，便知此花不在你的心外。”，也是一样的道理。“花”是因人而异的，如那个客厅，而“花”背后的道是不变的，就是那个储藏室。
-# 第六十三章 为无为 
+## 第六十三章 为无为 
 2022年11月30日
 2020年05月07日已删除
 原文为无为，事无事，味无味。大小多少，报怨以德。图难于其易，为大于其细；天下难事必作于易，天下大事必作于细。是以圣人终不为大，故能成其大。夫轻诺必寡信，多易必多难（nán）。是以圣人犹难（nán）之，故终无难（nán）矣。
@@ -504,14 +506,14 @@
 为无为！
 不是为了有用才去为，也不是为了什么事而去事。所谓为难，就是因为有个“为”才会“难”，如果无为，世上也就无难事了，无难事，也就无积怨。
 去做你想做的，不要被别人所谓的“有用”“无用”所栓死。世上的事本没有“有用”“无用”，只要去做了，都是“有用”的。
-# 第六十四章 其安易持 
+## 第六十四章 其安易持 
 2022年11月30日
 原文其安易持，其未兆易谋，其脆易泮（pàn），其微易散。为之于未有，治之于未乱。合抱之木，生于毫末；九层之台，起于垒土；千里之行，始于足下。为者败之，执者失之。是以圣人无为故无败，无执故无失。民之从事，常于几（jī）成而败之。慎终如始，则无败事。是以圣人欲不欲，不贵难得之货；学不学，复众人之所过；以辅万物之自然，而不敢为。
 道理研究点译文
 哈，千里之行始于足下。我们总想着要去走千里，然后拿这句话励志说要先走第一步。而实际上，老子的本意是，你总想着去走千里干嘛？该走路就走路，该休息就休息。一旦你有了这个念想，就必须走千里，不到千里就是失败。
 当然我们做事还是要有计划，但是请注意，是计划，不是执念。一旦计划变成执念，那就是钻牛角了。计划是一个客观词，只有完成和不完成，没有成败，如果加上成败对计划进行评价，那就是执念。
 千里之行，不是评价一个人成功与否的标准。仅仅是一个行程的距离。人生要有目标，但不要有目的地。目标完成了，生命还得继续，那就接着下一个目标；目标没完成，那就总结经验教训，争取后面完成。
-# 第六十五章 古之善为道者 
+## 第六十五章 古之善为道者 
 2020年05月20日已删除
  2022年11月30日 发布失败  
 原文
@@ -523,18 +525,18 @@
 
 
 另外，老子对于愚民还有一层意思就是告诉治国者不要自愚，不要自作聪明。有道可循的就遵道就行了，不要再制定人为规则了。比如开车要靠右，走路也要靠右。但是在家里走路，你就不要制定规则一定要靠右了，人家想怎么走就怎么走吧。
-# 第六十六章 江海所以能为百谷王者 
+## 第六十六章 江海所以能为百谷王者 
 2022年11月30日
 原文江海所以能为百谷王者，以其善下之，故能为百谷王。是以欲上民，必以言下之。欲先民，必以身后之。是以圣人处上而民不重（zhònɡ），处前而民不害。是以天下乐推而不厌，以其不争，故天下莫能与之争。
 道理研究点译文
 江海之所以能成为百谷之王，是因为所有水无论干净亦或是污秽，都能纳之。而万民只王亦同。不说万民了，那个太大，就说说企业管理者，作为管理者需能听到下属的心声，无论是褒还是贬，同时也需要容得下所有下属，无论其能力如何品德如何，这才是王者的风范。
 另外管理者要达到一个忘我的境界，不是自己把自己忘了，而是让下属把自己忘了，还是那句话，最好的管理就是没有管理。所有流程都如丝般顺滑。而这一切就是你的成就，只需静静地坐着，回味之前付出的艰辛。
-# 第六十七章 天下皆谓我道大 
+## 第六十七章 天下皆谓我道大 
 2022年11月30日
 原文天下皆谓我道大，似不肖（xiào）。夫（fú）唯大，故似不肖。若肖，久矣其细也夫（fú）！我有三宝，持而保之。一曰慈，二曰俭，三曰不敢为天下先。慈故能勇，俭故能广，不敢为天下先，故能成器长（zhǎng）。今舍慈且勇，舍俭且广，舍后且先，死矣！夫慈以战则胜，以守则固。天将救之，以慈卫之。
 道理研究点译文
 老子说：“我有三宝”。哈哈，真是个率性的老头。你们都说敢为天下先，我偏不敢。中国人的谦虚古有来之，你说我世界第一，我说不敢不敢，全国第三，你说我最厉害，我说还得继续努力。天下先得意思是可以先于天下去尝试，但是不能自居天下无敌，要知道强中自有强中手，即使真无敌也得挑战自我，不断向上，永无止境，永无先。
-# 第六十八章 善为士者不武 
+## 第六十八章 善为士者不武 
 2022年11月30日
 2020年06月03日已删除
 原文善为士者不武，善战者不怒，善胜敌者不与，善用人者为之下，是谓不争之德，是谓用人之力，是谓配天之极。
@@ -542,7 +544,7 @@
 作為一個戰士，平常要多訓練打戰本領，但是盡量不跟人打戰，萬一真的要打戰了，也不能生氣，要冷靜地去打，打完了也不跟人計較勝負，打完就收工，不死纏爛打輸不起。而真正的強者不是戰士，上善若水，再強大的武器也無法擊敗能包容一切的水。
 道理雖是如此簡單，但問題是誰又能擁有如水般強大的內心？我們都是凡人，我們都得與人斗。你的強大可以甩開一些平庸者的滋擾，但始終還是無法超越全人類，還是得斗。那“不怒”“不與”就是最好的與人斗的辦法。
 不斗是道。是終極目標，但達不到。不怒不與是德，是方法論，是生存方式。
-# 第六十九章 用兵有言 
+## 第六十九章 用兵有言 
 2022年11月30日
 2020年08月18日已删除
 原文用兵有言：吾不敢为主而为客，不敢进寸而退尺。是谓行（xíng）无行（háng），攘无臂，执无兵，乃无敌。祸莫大于轻敌，轻敌几丧吾宝。故抗兵相加，哀者胜矣。
@@ -560,7 +562,7 @@
 
 
 打战是考验自己对自己军事技能的判断，如果死皮赖脸死不认输，那就伤及无辜。买股票也一样，那是自己对于前期对股票研究的考验，判断对错都很正常，及时获利了结或者止损，否则绝无挣钱可能。
-# 第七十章 吾言甚易知 
+## 第七十章 吾言甚易知 
 2022年11月30日
 《道德经》原文  
 吾言甚易知，甚易行。天下莫能知，莫能行。言有宗，事有君。夫唯无知，是以不我知。知我者希，则我者贵。是以圣人被（pī）褐（hè）而怀玉。
@@ -573,7 +575,7 @@
 前段时间闲来无事，研究了一下天文，找了一本用翻译软件翻译的国外书，虽然错误百出，但是原文作者写得很是通俗易懂，我一个门外汉居然也看懂了大半，现学现卖，还煞有介事的拿来英文原文，对翻译者翻译错误之处进行了改正，当然门外汉还是门外汉，一旦涉及原理性的东西还是懵逼不懂，于是买来一门国内天文学教材，想学得更专业一点。结果打开一看，直接蒙掉了，那里面得公式直接连符号都看不懂，更不用说它的含义了。
 任何“道”要易知易行，任何“德”也要易知易行。
 大到国家制定法律法规，小到公司制定规章制度，都要易知易行。否则就容易滋生腐败，管理松散。
-# 第七十一章 知不知
+## 第七十一章 知不知
 2022年11月30日
 《道德经》原文  
 
@@ -582,7 +584,7 @@
 道理研究所译文  
 “知不知”就是知道自己还有很多不懂，这是大神。而有的人是不懂装懂，或者还有一种人是自己不会，就说世上没有人会的，这两种都是病，得治。当然大神也有可能会犯病，但是人家犯病了就吃药，该治就治。而有的人有病也不吃药，那就只有等死了。
 
-# 第七十二章 民不畏威
+## 第七十二章 民不畏威
 2022年11月30日 
 2020年08月20日已删除
 《道德经》原文  
@@ -596,7 +598,7 @@
 首先说互联网，什么是互联网？互联网的核心就是去中心化，传统的社会以及衍生出来的哲学、管理、经济、工业等等，都有一个中心，社会有皇帝、有政府，哲学有圣人，管理有领导，经济有央行，工业有行业协会。而互联网是什么，就是一个一个的点，不是谁围着谁转，谁是谁的领导，只有上传下载。
 再来说说互联网思维，既然互联网是去中心化，这绝对是颠覆性的，比我们颠覆几千年的封建社会还要颠覆。那我们的互联网思维肯定也是颠覆性的。知乎上找到一句话。“You must control it by surrendering control.通过放弃控制，来获得控制”。因为互连网的去中心化，就没有了控制的概念。以往是通过一级一级发红头文件来传递命令，来控制社会，而互联网则依据大数据进行舆论引导。当然这个概念还是探索性的，将来互联网思维会如何发展还远远无法下定论。
 最后再来说说本行，基于互联网思维的质量管理。互联网思维已经放弃了控制的概念，在这个基础上，质量管理也要做出颠覆性的改变，以往质量管理最核心的是要找到根本原因，但是往往受到各种干扰，比如技术条件有限、人为故意隐瞒、管理需求影响，其实很难找到或者及时找到根本原因，也无法进行彻底的改善。而互联网思维，则索性就放弃这种死板的改善，而是更关注客户需求，依据客户反馈调整产品设计，并非只是一味地改善，因为客户需求随时会变，而产品设计也要不断update.而传统工业里说的产品质量水平，在依据大数据分析客户需求和成本后，融入产品设计，进而随时进行快速反应调整。因为如果单独说质量水平，往往无法跟客户需求相匹配。比如以往的诺基亚手机，他的质量水平在当时的业界绝对是最高的，但是客户需求发生变化了，如果不改变产品设计也必然被市场抛弃。但是如果仅仅是跟上设计，没有质量水平支撑，同样会被市场诟病，就像雷军演讲中说到的小米曾经遇到的困境。所以基于互联网思维的质量管理，实际上已不再是质量管理，甚至不再是管理，或者说叫什么都已经不再重要了，互联网的快速已经让你没有时间考虑给一些东西下定义，只要干就行了，然后就是update，不停地更新、更新、更新、、
-# 第七十三章 勇于敢则杀 
+## 第七十三章 勇于敢则杀 
 2022年11月30日
 《道德经》原文  
 勇于敢则杀，勇于不敢则活，此两者或利或害。天之所恶，孰知其故？是以圣人犹难之。天之道，不争而善胜，不言而善应，不召而自来，繟（chǎn）然而善谋。天网恢恢，疏而不失。
@@ -613,7 +615,7 @@
 如今天天喊大数据，只要还有中心在，就无法真正互联网，就没有互联网思维，大数据也就是个摆设。
 比如每天开车路过沪翔高速S6，这个高速开通到现在不到5年就每天堵成狗了，反馈给市政，人家说设计的时候也没想到会有这么多车。但是，你不是有大数据吗？这么多摄像头，这么多辅警，每天各个路口统计一下车流量，应该有能力做到的，再把车流数据用大数据模拟一下，在设计这个高速的时候，就应该能知道这上面大概会跑上来多少车。你说十年二十年可能还有地域发展变化，但你这个正儿八经通车才两三年就客满了，要不就是大数据错了，要不就压根没用大数据。
 古人信仰天，现在光有信仰不行，还得用起来。
-# 第七十四章 民不畏死 
+## 第七十四章 民不畏死 
 2022年11月30日
 2020年08月21日已删除
 《道德经》原文  
@@ -654,7 +656,7 @@ OK，在来说卡槽这个案例，总结来说，三点：
 2. 可以用低成本的方案就无需高成本高精度，够用就行了。
 3. 国际企业本地化研发很重要，否则就会出现案例这样高成本低质量。
 这就是互联网的颠覆性。
-# 第七十五章 民之饥 
+## 第七十五章 民之饥 
 2022年11月30日
 《道德经》原文  
 民之饥，以其上食税之多，是以饥。民之难治，以其上之有为，是以难治。民之轻死，以其求生之厚，是以轻死。夫唯无以生为者，是贤于贵生。
@@ -684,7 +686,7 @@ OK，在来说卡槽这个案例，总结来说，三点：
 对管理很模糊，但对整体变化很精准。
 这可能是中国人最擅长的道吧。也算是老子留给后人最大的财产。在工业时代无用武之地，中国人的差不多思维经常被人诟病，但在互联网思维下却大展身手。还真有一统天下之势。
 能够掌握这门技巧的，估计也就只有美国人还能稍作抗衡，像日本人德国人这种方脑袋，只能一脸懵逼。
-# 第七十六章 人之生也柔弱 
+## 第七十六章 人之生也柔弱 
 2022年11月30日
 2020年09月03日-已删除
 《道德经》原文  
@@ -705,7 +707,7 @@ OK，在来说卡槽这个案例，总结来说，三点：
 
 这就是互联网思维的另一个要点：更新Update。
 更新是为了活得久，因为再牛逼的东西，不更新也得死，企业里最典型的就是诺基亚手机。
-# 第七十七章 天之道
+## 第七十七章 天之道
 2022年11月30日
 《道德经》原文  
 天之道，其犹张弓与？高者抑之，下者举之；有余者损之，不足者补之。天之道，损有余而补不足。人之道则不然，损不足以奉有余。孰能有余以奉天下？唯有道者。是以圣人为而不恃，功成而不处，其不欲见（xiàn）贤。
@@ -725,7 +727,7 @@ OK，在来说卡槽这个案例，总结来说，三点：
 
 
 互联网是不把双刃剑，或者说任何变革都是双刃剑。而互联网变革的优势在于它还带了金疮药--“update”。一旦伤及自我可以自我疗愈。这是之前变革所不具备或者有所欠缺的。这也是所有变革者所要重点关注的。
-# 第七十八章 天下莫柔弱于水 
+## 第七十八章 天下莫柔弱于水 
 2022年11月30日
 《道德经》原文  
 天下莫柔弱于水，而攻坚强者莫之能胜，以其无以易之。弱之胜强，柔之胜刚，天下莫不知，莫能行。是以圣人云：“受国之垢，是谓社稷主；受国不祥，是为天下王。”正言若反。
@@ -742,7 +744,7 @@ OK，在来说卡槽这个案例，总结来说，三点：
 这其实是很容易解决的问题，一般互联网公司都不会草率上线一个功能还未开发完成的app，即使上线还有β版本先小范围测试，考虑流量的话，还要做承压测试。要不断发现问题，然后不停update，这样一个app的用户才能感受到丝滑般的体验。
 而医院显然无论在互联网思维还是互联网产品上，都是不熟悉的，可能是为了对应上级的要求进行互联网“上云”。当然不熟悉也是正常的，毕竟人家是医院，不是互联网企业，主业当然要更关注看病。所以这种国之垢当然就落在社稷主-院长头上了，该如何管理呢？其实很简单，院长自己或者派人每天去模拟病人把整个看病流程走一遍就知道问题出在哪里，要如何去改了。
 作为管理，千百年来都是大同小异，国之兴衰，朝代更迭，企业荣亡，都基于管理，成于管理，败于管理。互联网时代的管理，有其颠覆性，甚至可能都不再叫管理。互联网让国家让企业的概念重新进行了定义。没有中心的组织我们该如何定义？在不停更新的背景下，已经很难定义兴衰荣亡，一个app的死亡可能只是一次版本的升级。而一个企业的衰亡可能也只是一次资本的过渡。由此种种，对于如何管理，如何面对生死，我们需要在哲学层面重新思考。
-# 第七十九章 和大怨必有余怨 
+## 第七十九章 和大怨必有余怨 
 2022年11月30日
 《道德经》原文  
 和大怨必有余怨，安可以为善？是以圣人执左契而不责于人。有德司契，无德司徹（chè）。天道无亲，常与善人。
@@ -754,7 +756,7 @@ OK，在来说卡槽这个案例，总结来说，三点：
 
 互联网中人人平等。“人人为我，我为人人”。你可以发布一些有营养的内容，来吸引粉丝，扩大流量，这就相当于你是在做好事，粉丝和流量就是你的表彰，然后你开始投放广告，写广告软文，这就是“人品提现”了，这时粉丝就会流失，然后两者赖婚博弈，最终达到一个平衡。
 契，贷物之符券也。合同剖之，而有左右。贷者执右，物主执左。
-# 第八十章 小国寡民 
+## 第八十章 小国寡民 
 2022年11月30日
 《道德经》原文  
 小国寡民。使有什（shǐ）伯（bǎi）之器而不用，使民重（zhònɡ）死而不远徙。虽有舟舆，无所乘之；虽有甲兵，无所陈之；使人复结绳而用之。甘其食，美其服，安其居，乐其俗。邻国相望，鸡犬之声相闻，民至老死，不相往来。
@@ -768,7 +770,7 @@ OK，在来说卡槽这个案例，总结来说，三点：
 昨天看了一篇某大学教授写的文章，到处引用道德经来解释抗击新冠疫情中道德经的思想。我觉得剖为牵强，道德经是讲“道”，当然可以代入任何场景，但是各行各业，各个事件，各种场景，有其特定的解释，非得让道德经来说，就好比问为什么1+1=2，你回答这是数学原理。道更多的是一种象征、一个符号，理解了就行了，悟道了，实际就是“空”了。
 ------
 最近发现一个社交软件mastodon(长毛象)，相比较tweet和微博微信，更具有互联网思维，就像当初的浏览器、当初的Email。对于互联网而言，“去中心”永远是它的道，背离了这个道，就没有了互联网的灵魂，只能跟着某个意志走。我相信若干年后像mastodon这样的社交会成为全人类主流的互联网社交方式。
-# 第八十一章 信言不美 
+## 第八十一章 信言不美 
 2022年11月30日
 《道德经》原文  
 信言不美，美言不信。善者不辩，辩者不善。知者不博，博者不知。圣人不积。既以为人己愈有，既以与人己愈多。天之道，利而不害；圣人之道，为而不争。
